# antigen-app

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  Dockerfile  Pipfile  README.md  api_nginx.conf  db.sqlite3  docker-compose.yml  log.txt  manage.py  nginx.conf  release-please-config.json  setup.cfg  uwsgi.ini
.github/: dependabot.yml
.github/workflows/: backend.yml  ci.yml  code.yml  containers.yml  conventional-pr-title.yml  dependabot-auto-merge.yml  frontend.yml  release-please.yml
OLD-frontend/: package.json
OLD-frontend/public/: index.html
OLD-frontend/src/antigen/: addLocal.tsx  slice.ts  utils.tsx
OLD-frontend/src/elisa_plate/: add.tsx
OLD-frontend/src/elisa_well/: aggregate.tsx  slice.ts
OLD-frontend/src/main/: header.tsx  home.tsx  index.tsx
OLD-frontend/src/nanobody/: aggregate.tsx
OLD-frontend/src/project/: individual.tsx  utils.tsx
OLD-frontend/src/utils/: api.tsx  elements.tsx  notifications.tsx  state_management.ts
OLD-frontend/tests/: elisaplate-view.test.tsx  elisawell.test.tsx
antigenapi/: admin.py  apps.py  models.py  urls.py  views.py
antigenapi/utils/: uniprot.py
antigendjango/: asgi.py  settings.py  urls.py
backend/: .dockerignore  .gitignore  Dockerfile  Dockerfile-dev  Pipfile  manage.py  pyproject.toml  setup.cfg  uwsgi.ini
backend/antigenapi/: admin.py  bioinformatics.py  models.py  parsers.py  tests.py  urls.py  views.py  views_old.py
backend/antigenapi/bioinformatics/: blast.py  imgt.py  test_imgt.py  test_vquest_integration.py
backend/antigenapi/files/: sequencing-submission-form-v1.xlsx  sequencing-submission-form-v2.xlsx
backend/antigenapi/fixtures/example-smcd1-files/elisaplates/: 14022024_smCD1_50nM_cohort15_aM13_15mins.xlsx  18012024_smCD1_47-well-phage_10nM_a-M13_15mins.xlsx
backend/antigenapi/fixtures/example-smcd1-files/sequencingresults/: SequencingResults_1_0_vquestairr.tsv  SequencingResults_1_0_vquestparams.txt
backend/antigenapi/management/commands/: load_fixtures.py
backend/antigenapi/migrations/: 0001_initial.py  0001_initial_squashed_0003_refactor_sequencing_runs.py  0002_elisawell_nanobody_optional.py  0002_sequencing_runs.py  0003_elisaplate_csv_file_alter_localantigen_sequence_and_more.py  0003_refactor_sequencing_runs.py  0004_remove_sequencingrun_results_date_and_more.py  0005_antigen_short_name.py  0005_sequencingrunresults_and_more.py  0006_antigen_short_name_unique.py  0007_sequencingrunresults_and_more.py  0008_seq_run_well_offset.py  0009_naive_cohorts.py  0010_named_nanobodies.py  0011_cascade_delete_seqruns.py  0012_rename_cdr3_nanobody_sequence.py  0013_pan_round_concentration.py  0014_antigen_short_long_names.py  0015_sublibraries.py  0016_alter_library_sublibrary.py  0017_sequencingrun_fill_horizontal.py
backend/antigenapi/tests/: test_auth.py  test_blast.py  test_csvupload.py  test_dashboard.py  test_dates.py  test_elisa_parser.py  test_file.py  test_fixtures.py  test_parsers.py  test_project.py  test_reports.py  test_uniprot.py  test_viewsets.py  unit_test.py
backend/antigenapi/utils/: dates.py  helpers.py  permission.py  uniprot.py  viewsets.py
backend/antigenapi/views/: antigens.py  cohorts.py  dashboard.py  elisa.py  fasta.py  libraries.py  llamas.py  mixins.py  nanobodies.py  projects.py  reports.py  sequencing.py
backend/antigendjango/: auth.py  settings.py  urls.py  wsgi.py
backend/static/: README
backend/uploads/elisaplates/: 24_05_2022_CSFR_abcor2_pan_1_30min.xlsx
docs/: TUTORIAL.md
docs/kubernetes-manifests/: antigenapp-prod-deployment-backend.yml  antigenapp-prod-deployment-frontend.yml  antigenapp-prod-ingress.yml  antigenapp-prod-pdb.yml  antigenapp-prod-postgres.yml  antigenapp-prod-s3-backrest.yml  antigenapp-prod-secret-s3.yml  antigenapp-prod-secrets.yml  antigenapp-prod-svc-backend.yml  antigenapp-prod-svc-frontend.yml  oauth2-proxy-deployment.yml  oauth2-proxy-ingress.yml  oauth2-proxy-secrets.yml  oauth2-proxy-svc.yml
frontend/: .eslintrc.cjs  Dockerfile  Dockerfile-dev  README.md  index.html  nginx-check-env.sh  nginx-prod.conf  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/public/: index.html
frontend/src/: App.css  App.js  App.jsx  App.test.js  App.test.jsx  BlastSequencing.js  BlastSequencing.jsx  BlastSequencing.test.js  BlastSequencing.test.jsx  ClearErrorOnNavigate.jsx  ClearErrorOnNavigate.test.jsx  ErrorHandler.js  ErrorHandler.jsx  ErrorHandler.test.js  ErrorHandler.test.jsx  HeadedPage.js  HeadedPage.jsx  HeadedPage.test.jsx  LoadingLlama.jsx  LoadingLlama.test.jsx  OkCancelDialog.js  OkCancelDialog.jsx  OkCancelDialog.test.js  OkCancelDialog.test.jsx  SearchSequencing.js  SearchSequencing.jsx  SearchSequencing.test.js  SearchSequencing.test.jsx  config.js  index.css  index.tsx  schema.js  setupTests.js  store.ts  testutils.js  testutils.jsx  testutils.test.js  testutils.test.jsx
frontend/src/antigen/: addLocal.tsx  addUniprot.tsx  aggregate.tsx  antigen.test.tsx  individual.tsx  slice.ts  utils.tsx
frontend/src/auth/: github.tsx
frontend/src/crudtemplates/: AddEditObjectPage.js  AddEditObjectPage.jsx  AddEditObjectPage.test.js  AddEditObjectPage.test.jsx  AuditLog.js  AuditLog.jsx  AuditLog.test.js  AuditLog.test.jsx  BlastResults.js  BlastResults.jsx  BlastResults.test.js  BlastResults.test.jsx  BlastResultsTable.js  BlastResultsTable.jsx  BlastResultsTable.test.jsx  ComboBox.js  ComboBox.jsx  ComboBox.test.js  ComboBox.test.jsx  Dashboard.js  Dashboard.jsx  Dashboard.test.js  Dashboard.test.jsx  ListTable.js  ListTable.jsx  ListTable.test.js  ListTable.test.jsx  RadioGroup.jsx  RadioGroup.test.js  RadioGroup.test.jsx  SequencingPlateLayout.js  SequencingPlateLayout.jsx  SequencingResults.js  SequencingResults.jsx  SequencingResults.test.js  SequencingResults.test.jsx  Tabs.js  Tabs.jsx  Tabs.test.jsx  Trivia.js  (+7 more)
frontend/src/elisa_plate/: add.tsx  aggregate.tsx  (+5 more)
frontend/tests/: antigen.test.tsx  elisaplate-creation.test.tsx  elisaplate-view.test.tsx  elisaplate.test.tsx  elisawell.test.tsx  nanobody.test.tsx  project.test.tsx  test-utils.tsx
(+43 files in other folders)
