[metadata]
name = antigenapp
description = A webapp for managing nanobody and antigen datasets
url = "https://github.com/rosalindfranklininstitute/antigen-app"
long_description = file: README.md

[options]
packages = find:
install_requires =
    django
    djangorestframework
    django-auditlog
    django-cors-headers
    django-guardian
    django-filter
    django-storages
    boto3
    numpy
    uwsgi
    xmlschema
    openpyxl
    psycopg2-binary
    pandas
    sentry-sdk

[options.extras_require]
dev =
    black==22.6.0
    isort>5.0
    flake8<4
    pytest
    pytest-cov
    pytest-black
    pytest-django
    pytest-mypy
    pytest-flake8
    pytest-black
    pytest-pydocstyle
    flake8-isort


include_package_data = False

[options.entry_points]
console_scripts =
    antigenapp = manage:main

[mypy]
ignore_missing_imports = True

[isort]
profile=black
float_to_top=true

[flake8]
max-line-length = 88
extend-ignore =
    E203,
    F811,
    F722,
exclude =
    migrations

[pydocstyle]
convention = google
add-ignore =
    D100, # Ignore missing docstrings in public modules
    D104, # Ignore missing docstrings in public packages
    D107, # Ignore missing docstrings in __init__ method
    D418, # Ignore missing docstrings in dunder methods; See: https://github.com/PyCQA/pydocstyle/issues/525

[tool:pytest]
DJANGO_SETTINGS_MODULE = antigendjango.settings
testpaths =
    antigendjango
    antigenapi
norecursedirs =
    migrations
python_files = tests.py test_*.py *_tests.py
# Run pytest with all our checkers, and don't spam us with massive tracebacks on error
addopts =
    --tb=native -vv --flake8 --black --mypy --ds=antigendjango.settings --pydocstyle
     --cov=. --cov-report term --cov-report xml:cov.xml

[coverage:report]
exclude_lines =
    pragma: no cover
    if sys.version_info
    if TYPE_CHECKING
    if False
    pass
